# keystoneauth-oidc

./: .coveragerc  .stestr.conf  .testr.conf  .travis.yml  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
keystoneauth_oidc/: loading.py  plugin.py
keystoneauth_oidc/tests/unit/: test_oidc.py
keystoneauth_oidc_authz_code/: exceptions.py  loading.py  plugin.py
keystoneauth_oidc_authz_code/tests/unit/: test_loading.py  test_oidc.py
