[metadata]
name = keystoneauth-oidc-authz-code
summary = OpenID Connect Authorization Code authentication plugin for keystoneauth
description-file =
    README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = https://github.com/indigo-dc/keystoneauth-oidc-authz-code
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    keystoneauth_oidc_authz_code

[entry_points]
keystoneauth1.plugin =
    v3oidccode = keystoneauth_oidc_authz_code.loading:OpenIDConnectAuthorizationCode    
    v3oidc = keystoneauth_oidc_authz_code.loading:OpenIDConnect    
