[metadata]
name = keystoneauth-oidc
summary = OpenID Connect support for OpenStack keystoneauth library
description-file =
    README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = https://github.com/IFCA/keystoneauth-oidc
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    keystoneauth_oidc

[entry_points]
keystoneauth1.plugin =
    v3oidccode = keystoneauth_oidc.loading:OpenIDConnectAuthorizationCode    
    v3oidc = keystoneauth_oidc.loading:OpenIDConnect    
